main media file finished

--- a/src/index.html
+++ b/src/index.html
@@ -37,18 +37,18 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" width="65"></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo" width="65"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="#avtokg">О нас</a></li>
                             <li class="nav-item"><a class="nav-link" href="tickets.html">Онлайн-тест</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#faqs">FAQ's</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#faqs">Вопросы</a></li>
                             <li class="nav-item"><a class="nav-link" href="#footer">Контакты</a></li>
                         </ul>
                     </div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-xl-6 col-lg-6">
                     <div class="avto__img">
-                        <img src="img/driving.webp" width="550" alt="images">
+                        <img src="img/driving.png" width="550" alt="images">
                     </div>
                 </div>
             </div>
@@ -148,8 +148,8 @@
                 <div class="col-12">
                     <h2 class="section-title">Стоимость обучения</h2>
                 </div>
-                <div class="col-xl-6 col-lg-6">
-                    <div class="price__bg">
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                    <div class="price__bg price__bg-ofset">
                         <p class="price__category">Категория «В»</p>
                         <p class="price__old">7 000</p>
                         <p class="price__summa">6 000 сом</p>
@@ -162,8 +162,8 @@
                         <a class="button__link button__link-price" href="#application">Записаться</a>
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6">
-                    <div class="price__bg price-mb">
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                    <div class="price__bg price__bg-ofset">
                         <p class="price__category">Категория «ВC»</p>
                         <p class="price__old">7 500</p>
                         <p class="price__summa">6 500 сом</p>
@@ -233,14 +233,14 @@
                             <input type="checkbox" id="chck5">
                             <label class="tab-label" for="chck5">Можно ли сократить или увеличить срок обучения ?</label>
                             <div class="tab-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nulla rerum soluta hic nobis molestias, mollitia minus libero in error! Quidem dicta atque pariatur animi soluta eos cumque quibusdam omnis! Eum accusamus, ipsum distinctio odit debitis eaque possimus eius tempore libero explicabo a repellendus et exercitationem veritatis veniam neque molestias.
                             </div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck6">
                             <label class="tab-label" for="chck6">Когда начинается вождение ?</label>
                             <div class="tab-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
                             </div>
                         </div>
                     </div>
@@ -253,8 +253,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                        <h2 class="map__title">География присутствия</h2>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8152596253512!2d74.59338221541131!3d42.876743279155654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dfb7209fa9%3A0xb5d910a040be5055!2z0J7RgdCe0J4gItCe0JHQlCDQptC10L3RgtGAIiAo0JDQstGC0L7RiNC60L7Qu9CwKQ!5e0!3m2!1sru!2skg!4v1649953978556!5m2!1sru!2skg" width="100%" height="450" style="border-radius: 16px; border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <h2 class="section-title">География присутствия</h2>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8152596253512!2d74.59338221541131!3d42.876743279155654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dfb7209fa9%3A0xb5d910a040be5055!2z0J7RgdCe0J4gItCe0JHQlCDQptC10L3RgtGAIiAo0JDQstGC0L7RiNC60L7Qu9CwKQ!5e0!3m2!1sru!2skg!4v1649953978556!5m2!1sru!2skg" width="100%" height="400" style="border-radius: 16px; border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="map__btn">
                         <a href="#application" class="btn-show-pulse">Записаться на обучение</a>
                     </div>
@@ -294,7 +294,7 @@
         </div>
     </footer>
 
-    <a href="#header" class="pageup">
+    <a href="#header" id="header" class="pageup">
         <i class="fas fa-chevron-circle-up"></i>
     </a>
     <!-- EBD MAIN -->
