--- a/src/question.html
+++ b/src/question.html
@@ -17,64 +17,48 @@
 </head>
 <!-- START MAIN -->
 <body class="body">
-    <div class="banner">
+    <!-- <div class="banner">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-mb-3">
-                    <a class="banner__inst" href="#">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="banner__what" href="#">
-                        <i class="fab fa-whatsapp"></i>
-                    </a>
+                    <a class="banner__inst" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="banner__what" href="#"><i class="fab fa-whatsapp"></i></a>
                 </div>
                 <div class="col-4 col-mb-6">
                     <p class="banner__time">пн-пт 09:00 18:00, сб-вс 10:00 18:00</p>
                 </div>
                 <div class="col-4 col-mb-3">
-                    <p class="banner__price"><span>г.</span> Бишкек</p>
+                    <p class="banner__address"><i class="fas fa-map-marker-alt"></i> г.Бишкек, ул. Чуй 215</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="promo">
+
+    <header class="header" id="header">
         <div class="container">
-            <div class="row">
-                <div class="col-3">
-                    <a class="promo__logo" href="#"><img src="img/logo.png" alt="logo" width="50"></a>
+            <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" width="65"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#avtokg">О нас</a></li>
+                            <li class="nav-item"><a class="nav-link" href="tickets.html">Онлайн-тест</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#faqs">Вопросы</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#footer">Контакты</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-3">
-                    <a class="promo__phone" href="tel:996707228818">+996 707 22 88 18</a>
-                </div>
-                <div class="col-3">
-                    <a class="button__link" href="tel:996707228818">Заказать звонок</a>
-                </div>
-                <div class="col-3">
-                    <p class="promo__street"><i class="fas fa-map-marker-alt"></i>ул, Чуй-215</p>
-                </div>
-            </div>
+            </nav>
         </div>
-    </div>
-    <hr>
-    <header class="menu" id="up">
-        <nav>
-            <div class="container">
-                <ul class="menu__nav">
-                    <li class="menu__item"><a class="menu__link" href="index.html">Главная</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#avtokg">О нас</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#category">Категория</a></li>
-                    <li class="menu__item"><a class="menu__link" href="tickets.html">Онлайн-тест</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#faq">FAQ's</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#footer">Контакты</a></li>
-                </ul>
-            </div>
-            <div class="burger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
     </header>
+    
+    <div class="clearfix-header"></div> -->
 
     <!-- контейнер для контента -->
     <div id="main" class="container">
@@ -167,7 +151,8 @@
         </div>
     </div>
     </div>
-    <footer class="footer" id="footer">
+
+    <!-- <footer class="footer" id="footer">
         <div class="container">
             <div class="row footer__info">
                 <div class="col-xl-4 col-md-4">
@@ -196,7 +181,7 @@
                 Все права защищены
             </p>
         </div>
-    </footer>
+    </footer> -->
 
     <a href="#up" class="pageup">
         <i class="fas fa-chevron-circle-up"></i>
