all media files are finished

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Автошкола ОБД-Центр</title>
     <!-- CSS only -->
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -35,14 +36,14 @@
 
     <header class="header" id="header">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+            <nav class="navbar navbar-expand-lg navbar-light shadow-sm" id="up">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo" width="65"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav me-auto mt-1 mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
                             </li>
@@ -205,40 +206,40 @@
                 <div class="tabs">
                     <div class="tab">
                         <input type="checkbox" id="chck1">
-                        <label class="tab-label" for="chck1">С какого возраста можно начать обучение ?</label>
+                        <label class="tab-label" for="chck1">С какого возраста можно начать обучение?</label>
                         <div class="tab-content">Начать обучение можно на В-с 17 лет, на ВС - с 18 лет</div>
                     </div>
                         <div class="tab">
                             <input type="checkbox" id="chck2">
-                            <label class="tab-label" for="chck2">Если в ходе изучения теории возник вопрос ?</label>
+                            <label class="tab-label" for="chck2">Если в ходе изучения теории возник вопрос?</label>
                             <div class="tab-content">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
                             </div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck3">
-                            <label class="tab-label" for="chck3">Можно ли приостановить обучение ?</label>
+                            <label class="tab-label" for="chck3">Можно ли приостановить обучение?</label>
                             <div class="tab-content">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
                             </div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck4">
-                            <label class="tab-label" for="chck4">Какие документы необходимы ?</label>
+                            <label class="tab-label" for="chck4">Какие документы необходимы?</label>
                             <div class="tab-content">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
                             </div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck5">
-                            <label class="tab-label" for="chck5">Можно ли сократить или увеличить срок обучения ?</label>
+                            <label class="tab-label" for="chck5">Можно ли сократить или увеличить срок обучения?</label>
                             <div class="tab-content">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nulla rerum soluta hic nobis molestias, mollitia minus libero in error! Quidem dicta atque pariatur animi soluta eos cumque quibusdam omnis! Eum accusamus, ipsum distinctio odit debitis eaque possimus eius tempore libero explicabo a repellendus et exercitationem veritatis veniam neque molestias.
                             </div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck6">
-                            <label class="tab-label" for="chck6">Когда начинается вождение ?</label>
+                            <label class="tab-label" for="chck6">Когда начинается вождение?</label>
                             <div class="tab-content">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
                             </div>
@@ -294,9 +295,10 @@
         </div>
     </footer>
 
-    <a href="#header" id="header" class="pageup">
+    <a href="#up" class="pageup">
         <i class="fas fa-chevron-circle-up"></i>
     </a>
+
     <!-- EBD MAIN -->
 
     <!-- connections Script -->
