--- a/src/tickets.html
+++ b/src/tickets.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Автошкола ОБД-Центр</title>
     <!-- CSS only -->
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -16,53 +17,10 @@
 </head>
 <!-- START MAIN -->
 <body class="body">
-    <div class="banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 col-mb-3">
-                    <a class="banner__inst" href="#"><i class="fab fa-instagram"></i></a>
-                    <a class="banner__what" href="#"><i class="fab fa-whatsapp"></i></a>
-                </div>
-                <div class="col-4 col-mb-6">
-                    <p class="banner__time">пн-пт 09:00 18:00, сб-вс 10:00 18:00</p>
-                </div>
-                <div class="col-4 col-mb-3">
-                    <p class="banner__address"><i class="fas fa-map-marker-alt"></i> г.Бишкек, ул. Чуй 215</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <header class="header" id="header">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" width="65"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Главная</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#avtokg">О нас</a></li>
-                            <li class="nav-item"><a class="nav-link" href="tickets.html">Онлайн-тест</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#faqs">Вопросы</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#footer">Контакты</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </header>
-    
-    <div class="clearfix-header"></div>
-
     <section class="tickets">
         <div class="container">
             <h3 class="tickets__title">Обучающий тест по Правилам Дорожного Движения Кыргызской Республики. 2022 год</h4>
-            <h2 class="tickets__school">«Автошкола ОБД-Центр»</h2>
+            <h2 class="tickets__school">Автошкола «ОБД-Центр»</h2>
             <div class="custom-tab customize-tab tabs_creative">
                 <ul class="nav nav-tabs tickets__nav" id="myTab" role="tablist">
                     <li class="nav-item">
@@ -131,42 +89,6 @@
             </div>
         </div>
     </section>
-
-    <footer class="footer" id="footer">
-        <div class="container">
-            <div class="row footer__info">
-                <div class="col-xl-4 col-md-4">
-                    <h1 class="footer__title">ОБД - Центр</h1>
-                    <a class="footer__link" href="#">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="footer__link" href="#">
-                        <i class="fab fa-whatsapp"></i>
-                    </a>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <h3 class="footer__contact">Наш адрес:</h3>
-                    <p class="footer__descr">г. Бишкек пр Чуй-215 Пересекает ул. Т.Молдо, в здани Горного Института, ориентир кинотеатр «Россия»</p>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <h3 class="footer__contact">Контактные телефоны:</h3>
-                    <a class="footer__phone footer__mb" href="tel:996707228818">+996 707 22 88 18</a>
-                    <a class="footer__phone" href="tel:996777712890">+996 777 71 28 90</a>
-                </div>
-            </div>
-        </div>
-        <div class="footer__copyright">
-            <p class="footer__proverbs">
-                © 2022 Автошкола «ОБД-Центр»
-                Все права защищены
-            </p>
-        </div>
-    </footer>
-
-    <a href="#up" class="pageup">
-        <i class="fas fa-chevron-circle-up"></i>
-    </a>
-    <!-- EBD MAIN -->
 
     <!-- connections Script -->
     <script src="plugins/jQuery/jquery-3.3.1.min.js"></script>
