--- a/src/question.html
+++ b/src/question.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Автошкола ОБД-Центр</title>
     <!-- CSS only -->
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/question-vicon-32x32.png">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -15,59 +16,18 @@
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/question.css" />
 </head>
-<!-- START MAIN -->
 <body class="body">
-    <!-- <div class="banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 col-mb-3">
-                    <a class="banner__inst" href="#"><i class="fab fa-instagram"></i></a>
-                    <a class="banner__what" href="#"><i class="fab fa-whatsapp"></i></a>
-                </div>
-                <div class="col-4 col-mb-6">
-                    <p class="banner__time">пн-пт 09:00 18:00, сб-вс 10:00 18:00</p>
-                </div>
-                <div class="col-4 col-mb-3">
-                    <p class="banner__address"><i class="fas fa-map-marker-alt"></i> г.Бишкек, ул. Чуй 215</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <header class="header" id="header">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" width="65"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Главная</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#avtokg">О нас</a></li>
-                            <li class="nav-item"><a class="nav-link" href="tickets.html">Онлайн-тест</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#faqs">Вопросы</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#footer">Контакты</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </header>
-    
-    <div class="clearfix-header"></div> -->
-
     <!-- контейнер для контента -->
     <div id="main" class="container">
         <div class="row">
             <div class="col-md-12">
                 <article>
                     <div class="row">
+                        <div id="questTopButton" class="col-md-6">
+                            <div class="quest-start quest-start-mt">Перезапустить тест</div>
+                        </div>
                         <div id="timerBlock" class="col-md-6" style="text-align:right; float: right;">
-                            <span style="margin-right:10px; font-weight: 400; font-size: 22px;">Ваши время 20:00</span>
+                            <span style="margin-right:10px; margin-top: 30px; display: inline-block; font-weight: 400; font-size: 22px;">Ваши время 20:00</span>
                             <span style="margin-right:3px;"><svg xmlns="http://www.w3.org/2000/svg" width="19"
                                     height="22">
                                     <g fill="none" fill-rule="evenodd" transform="translate(1 1)">
