update media file

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Автошкола ОБД-Центр</title>
-    <!-- CSS only -->
+    <meta name="description" content="Автошкола ОБД-Центр в центре города Бишкек, по адресу пр. Чуй-215, (Пересекает Т.Молдо) «Автошкола» ведет свою деятельность с 2005 года">
+    <meta name="keywords" content="ОБД-Центр, Автошкола, Автошкола Бишкек, Автошкола Онлайн-тест. ОБД-Центр Онлайн-тест">
+    <meta property="og:title" content="Автошкола ОБД-Центр">
+    <meta property="og:image" content="">
+    <meta property="og:site_name" content="Автошкола ОБД-Центр">
+    <meta property="og:url" content="">
+     <!-- favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+     <!-- css only -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/brands.css"> -->
+    <!-- <link rel="stylesheet" href="css/fontawesome.min.css"> -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <!-- START MAIN -->
@@ -43,7 +53,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mt-1 mb-2 mb-lg-0">
+                        <ul class="navbar-nav me-auto pr-0 pl-0 mt-1 mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
                             </li>
@@ -103,13 +113,13 @@
         <div class="container">
             <div class="row">
                 <h1 class="section-title">Благоприятные условия для  обучения в нашей Автошколе</h1>
-                <div class="col-xl-6 col-lg-6">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                     <li class="conditions__text">Автошкола предоставлять дополнительные часы на практичесие навыки вождения для лиц, желающих еще более усовершенствовать свои навыки вождения</li>
                     <li class="conditions__text">Оплата за обучение возможна произвести по частям</li>
                     <li class="conditions__text">Теоретические занятия утром и вечером</li>
                     <li class="conditions__text">Практические занятия по вождению с 09.00 до 18.00</li>
                 </div>
-                <div class="col-xl-6 col-lg-6">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                     <li class="conditions__text">С понедельника по субботу, график и времия вождения вы сами выбираете в удобное время, и инструкторов тоже</li>
                     <li class="conditions__text">Категория «В» срок обучения 2,5 месяц</li>
                     <li class="conditions__text">Категория «ВС» срок обучения 3,5 месяц</li>
@@ -123,19 +133,19 @@
         <div class="container">
             <h2 class="section-title">Этапы прохождения обучения</h2>
             <div class="row">
-                <div class="col-xl-3 col-lg-3 stages__box">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 stages__box">
                     <span class="stages__number"><i></i></span>
                     <p class="stages__descr">Изучение теоретической части</p>
                 </div>
-                <div class="col-xl-3 col-lg-3 stages__box">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 stages__box">
                     <span class="stages__number"><i></i></span>
                     <p class="stages__descr">Вождение с инструктором</p>
                 </div>
-                <div class="col-xl-3 col-lg-3 stages__box">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 stages__box">
                     <span class="stages__number"><i></i></span>
                     <p class="stages__descr">Внутренний экзамен в автошколе</p>
                 </div>
-                <div class="col-xl-3 col-lg-3 stages__box">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 stages__box">
                     <span class="stages__number"><i></i></span>
                     <p class="stages__descr">Экзамен в ГРС в сопровождении автошколы</p>
                 </div>
@@ -207,42 +217,28 @@
                     <div class="tab">
                         <input type="checkbox" id="chck1">
                         <label class="tab-label" for="chck1">С какого возраста можно начать обучение?</label>
-                        <div class="tab-content">Начать обучение можно на В-с 17 лет, на ВС - с 18 лет</div>
+                        <div class="tab-content"><p>Начать обучение можно на В-с 17 лет, на ВС - с 18 лет</p></div>
                     </div>
                         <div class="tab">
                             <input type="checkbox" id="chck2">
-                            <label class="tab-label" for="chck2">Если в ходе изучения теории возник вопрос?</label>
-                            <div class="tab-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
-                            </div>
+                            <label class="tab-label" for="chck2">Можно ли приостановить обучение?</label>
+                            <div class="tab-content">По разным обстоятельствам складываются так,  что запланированные мероприятия приходится откладывать или приостанавливать. Учеба в автошколе также в этом плане не является исключением. Бывает, что по тем или иным причинам ученику нужно прервать образовательный процесс. Это может быть, например, срочный отъезд по личным или рабочим делам, болезнь, отсутствие свободного времени, экзамены и т.д. Система курсов по вождению предполагает такую возможность., Но только на 1 месяц <br>
+                            Так, в ситуации, когда необходимо прервать обучение на водительские права, следует поставить в известность  администрацию учебного заведения и учебный процесс будет приостановлен <br>Возобновляя учебу, Вам придется посетить не хватающие до полного курса теоретические лекции вместе с другой группой и отзаниматься остаток практических часов с инструктором на площадке и в городе. Если Вас не было очень долго, нужно будет начать все сначала</div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck3">
-                            <label class="tab-label" for="chck3">Можно ли приостановить обучение?</label>
-                            <div class="tab-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
-                            </div>
+                            <label class="tab-label" for="chck3">Какие документы необходимы?</label>
+                            <div class="tab-content">Фото 3*4 2 шт Мед.справка 0.83У Копия паспорта</div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck4">
-                            <label class="tab-label" for="chck4">Какие документы необходимы?</label>
-                            <div class="tab-content">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
-                            </div>
+                            <label class="tab-label" for="chck4">Можно ли сократить или увеличить срок обучения?</label>
+                            <div class="tab-content">Сократить никак нельзя По учебному плану предусмотренные определенные сроки обучения на отдельные категории Продлить обучения можно только, если учащийся получил отсрочку по причине</div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck5">
-                            <label class="tab-label" for="chck5">Можно ли сократить или увеличить срок обучения?</label>
-                            <div class="tab-content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nulla rerum soluta hic nobis molestias, mollitia minus libero in error! Quidem dicta atque pariatur animi soluta eos cumque quibusdam omnis! Eum accusamus, ipsum distinctio odit debitis eaque possimus eius tempore libero explicabo a repellendus et exercitationem veritatis veniam neque molestias.
-                            </div>
-                        </div>
-                        <div class="tab">
-                            <input type="checkbox" id="chck6">
-                            <label class="tab-label" for="chck6">Когда начинается вождение?</label>
-                            <div class="tab-content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
-                            </div>
+                            <label class="tab-label" for="chck5">Когда начинается вождение?</label>
+                            <div class="tab-content">Практические занятия в Автошколе начинаются после четырех занятий теории. Потом процесс обучения идёт теория и практика параллельно</div>
                         </div>
                     </div>
                 </div>
@@ -305,6 +301,7 @@
     <script src="plugins/jQuery/jquery-3.3.1.min.js"></script>
     <script src="plugins/jQuery/jquery-migrate-3.3.1.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="js/fontawesome.min.js"></script> -->
     <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
